--- a/root/tema3.html
+++ b/root/tema3.html
@@ -9,10 +9,10 @@
 <body>
     <nav>
     <ul>
-        <li><a href="root/index.html">principal</a></li>
-        <li><a href="/tema1.html">tema 1</a></li>
-        <li><a href="/tema2.html">tema 2</a></li>
-        <li><a href="/tema4.html">tema 4</a></li>
+        <li><a href="/root/index.html">principal</a></li>
+        <li><a href="/root/tema1.html">tema 1</a></li>
+        <li><a href="/root/tema2.html">tema 2</a></li>
+        <li><a href="/root/tema4.html">tema 4</a></li>
     </ul>
     </nav>
 <section>
@@ -20,7 +20,7 @@
 <header>
     <hgroup>
         <!--titulo del articulo-->
-        <h2><img src="root/assets/imagenes/futbol.png" alt="balones" height="35px" width="auto">
+        <h2><img src="/root/assets/imagenes/jugador-de-futbol.png" alt="balones" height="35px" width="auto">
         mejores futbolistas</h2>
         <h4>10/11/21</h4>
     </hgroup>
@@ -33,8 +33,8 @@
     intenta hacer lo mejor de lo mejor y es bueno pero no se fijan en la importancia de sus jugadores y 
     también en sus necesidades, tenemos que apoyar más a los jugadores.</p>
     <figure>
-        <img src="/root/assets/imagenes/futbolistas.jpg" alt="jugadores" height="600px" width="auto">
-        <figcaption> jugadores</figcaption>
+        <img src="/root/assets/imagenes/futbol.jpg" alt="jugadores" height="600px" width="auto">
+        <figcaption> balon de futbol</figcaption>
     <h4>ranking de los mejores jugadores</h4>
     <li>10-eden hazard</li>
     <li>9-gareth bale</li>
