--- a/root/index.html
+++ b/root/index.html
@@ -1,10 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Blog del mundo</title>
-</head>
-<body>
-    
-</body>
+<html lang="es">
+
+    <head>
+        <meta charset="UTF-8">
+        <title>El Blog del mundo</title>
+    </head>
+
+    <body>
+        <nav>
+            <ul>
+                <li><a href="tema1.html">Tema 1</a></li>
+                <li><a href="tema2.html">Tema 2</a></li>
+                <li><a href="tema3.html">Tema 3</a></li>
+                <li><a href="tema4.html">Tema 4</a></li>
+            </ul>
+        </nav>
+        <!--aqui empieza el parrafo-->
+        <p>
+
+
+
+        </p>
+        <!--aqui termina escribe de lo que quieras-->
+
+
+        <!--aqui otro parrafo-->
+        <p>
+
+
+
+
+        </p>
+        <!--aqui ya termina el trabajo-->
+    </body>
+
 </html>
