--- a/root/tema3.html
+++ b/root/tema3.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-  
     <title>futbolistas</title>
+    <!--carga la hoja de estilos-->
+    <link rel="estylos_luis_fer.css" href="/root/assets/styles/estilos_luis_fer.css">
 </head>
 <main>
 <body>
@@ -90,7 +91,7 @@
 <!--termina el footer-->
 </article>
 </section>
-<!--termina mi blog-->
+<!--termina mi blog probando por si las dudas-->
 </body>
 </main>
 </html>
