tema 3 hasta semana 6

--- a/root/tema3.html
+++ b/root/tema3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>futbolistas</title>
     <!--carga la hoja de estilos-->
-    <link rel="estylos_luis_fer.css" href="/root/assets/styles/estilos_luis_fer.css">
+    <link rel="estilos_luis_fer.css" href="/root/assets/styles/estilos_luis_fer.css">
 </head>
 <main>
 <body>
