--- a/root/tema4.html
+++ b/root/tema4.html
@@ -1,97 +1,186 @@
+<!--luis fernando muñoz ledo-->
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-  
-    <title>ciclistas</title>
-</head>
-<main>
-<body>
-    <nav>
-    <ul>
-        <li><a href="/root/index.html">principal</a></li>
-        <li><a href="/root/tema1.html">tema 1</a></li>
-        <li><a href="/root/tema2.html">tema 2</a></li>
-        <li><a href="/root/tema3.html">tema 3</a></li>
-    </ul>
-    </nav>
-<section>
-<article>
-<header>
-    <hgroup>
-        <!--titulo del articulo-->
-        <h2><img src="/root/assets/imagenes/ciclista.png" alt="bicicletas" height="35px" width="auto">
-        mejores futbolistas</h2>
-        <h4>10/11/21</h4>
-    </hgroup>
-</header>
-<!--inicia contenido del articulo-->
-<div>
-<h2>Futbol</h2>
-<p>El ciclismo de montaña, considerado un deporte de riesgo, es un ciclismo de competición realizado en circuitos naturales generalmente a través de bosques por caminos angostos con cuestas empinadas y descensos muy rápidos.
-    Las bicicletas suelen ser fabricadas de aluminio, titanio, carbono u otras aleaciones lo más ligeras posibles, llevan suspensión delantera que está en la horquilla, con recorrido desde 100 a 210mm, que puede ser de resorte, 
-    aceite, aire o ambos sistemas combinados; algunas usan también suspensión para la rueda trasera, normalmente con un sistema de articulación en el cuadro de la bicicleta. La suspensión trasera puede estar, raramente, integrada
-     en el cuadro. A finales de la primera década del siglo XXI, la mayoría usaba cambios de 9 velocidades en el piñón (casete) de la rueda posterior y 3 platos en la catalina. Posteriormente, en el mercado se comenzaron a comercializar 
-     bicicletas con biplato adelante y juegos de casete, de 10 y 11 velocidades en el eje trasero; en el 2015 se incursionó en el mercado con la catalina monoplato con casetes de 11 y 12 velocidades, y, hacia finales de la segunda década 
-     del siglo XXI, se creó un nuevo tipo con 13 velocidades, poco común entre los ciclistas. Estas configuraciones siempre son a elección del deportista, el avance de la tecnología permitió alojar más relaciones en el casete para simplificar 
-     la Catalina y hacer más sencillo el manejo de las relaciones llevándolos a un solo actuador en el manubrio a diferencia de los sistemas tradicionales con relaciones en el casete y también en la catalina que requieren de dos actuadores o 
-     sistemas electromecánicos automatizados más complejos y costosos</p>
-    <figure>
-        <img src="/root/assets/imagenes/ciclistas.jpg" alt="ciclistas" height="600px" width="auto">
-        <figcaption> balon de futbol</figcaption>
-    <h4>ranking de los mejores ciclistas</h4>
-    <li>10-alfredo binda</li>
-    <li>9-felice gimondi</li>
-    <li>8-louison bobet</li>
-    <li>7-chris froome</li>
-    <li>6-gino bartali</li>
-    <li>5-miguel indurain</li>
-    <li>4-jacques anaquetil</li>
-    <li>3-fausto coppi</li>
-    <li>2-bernard hinault</li>
-    <li>1-eddy marckx</li>
-    <figure>
-        <iframe width="560" height="315" 
-        src="https://www.youtube.com/embed/hK2zzK4ctdw" 
-        title="YouTube video player" 
-        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-        allowfullscreen></iframe>
-    </figure>
-    <p>
-        dentro del ranking se puede ver varios ejemplos de personas que han marcado la historia.
-        que han dejado huella de lo que hoy se conoce que como el ciclismo
-    </p>
-    <p>
-        trambien podemos ver que desafortunadamente este ranking es mas una opinion personal sobre a quienes han marcado algo dentro del
-        deporte y no los que se lo merecen por titulos ya que si fuera asi se mostrarian otros dentro de la tabla
-    </p>
-    <h5>paginas oficiales sitios web</h5>
-    <li><a href="https://www.pinkbike.com/">pinkbike</a></li>
-    <li><a href="https://www.canyon.com/es-mx/">canyon</a></li>
-    <li><a href="https://www.trekbikes.com/mx/es_MX/">trek</a></li>
-    <li><a href="https://www.gmbn.com/">gmbn</a></li>
-    <li><a href="https://www.redbull.com/mx-es/tags/mtb">redbull bike</a></li>
-</div>
-<!--aqui termina el contenido del articulo-->
-<!--inicia footer-->
-<footer>
-    <!--datos del autor-->
-    <div>
-        <span style="color: brown;">BICIO</span> <a href="https://www.youtube.com/channel/UCqOlZaDEfsCreHDY68DFtRQ" target="BICIO"></a>
-    </div>
-    <!--fin de datos del autor-->
-    <!--bibliografia-->
-    <blockquote>
-        <cite><i>
-            Salón de la Fama del Ciclismo | Qué es y quiénes forman parte - Paperblog. (2016). Retrieved February 3, 2022, 
-            from Paperblog website: https://es.paperblog.com/salon-de-la-fama-del-ciclismo-que-es-y-quienes-forman-parte-4512600/
-        </i></cite>
-    </blockquote>
-</footer>
-<!--termina el footer-->
-</article>
-</section>
-<!--termina mi blog-->
-</body>
-</main>
+<html lang="es">
+
+    <head>
+        <!--carga los caracteres latinos-->
+        <meta charset="UTF-8">
+        <title>ciclistas</title>
+        <link rel="stylesheet" href="/root/assets/styles/estilos_luis_fer.css">
+    </head>
+
+    <body>
+        <!--empieza mi blog-->
+        <nav>
+            <ul>
+                <li><a class="resaltado" href="index.html" target="_blank">Principal</a></li>
+                <li><a href="tema1.html">Tema 1</a></li>
+                <li><a href="tema2.html">Tema 2</a></li>
+                <li><a href="tema3.html">Tema 3</a></li>
+            </ul>
+        </nav>
+        <section>
+            <header id="ciclismo">
+                <hgroup>
+                    <!--titulo del articulo-->
+                    <h1>mejores ciclistas</h1>
+                </hgroup>
+            </header>
+            <main>
+                <article>
+                    <h2><img src="assets/images/ciclista.png" alt="ciclismo" height="35px" width="auto">¿es tan peligroso?</h2>
+                    <!--fecha en la que se escibio el articulo-->
+                    <h4>10/11/21</h4>
+                    <!--inicia contenido del articulo-->
+                    <div>
+                        <p>El ciclismo de montaña, considerado un deporte de riesgo, es un ciclismo de competición realizado en circuitos naturales generalmente a través de bosques por caminos angostos con cuestas empinadas y descensos muy rápidos.
+                            Las bicicletas suelen ser fabricadas de aluminio, titanio, carbono u otras aleaciones lo más ligeras posibles, llevan suspensión delantera que está en la horquilla, con recorrido desde 100 a 210mm, que puede ser de resorte, 
+                            aceite, aire o ambos sistemas combinados; algunas usan también suspensión para la rueda trasera, normalmente con un sistema de articulación en el cuadro de la bicicleta. La suspensión trasera puede estar, raramente, integrada
+                            en el cuadro. A finales de la primera década del siglo XXI, la mayoría usaba cambios de 9 velocidades en el piñón (casete) de la rueda posterior y 3 platos en la catalina. Posteriormente, en el mercado se comenzaron a comercializar 
+                            bicicletas con biplato adelante y juegos de casete, de 10 y 11 velocidades en el eje trasero; en el 2015 se incursionó en el mercado con la catalina monoplato con casetes de 11 y 12 velocidades, y, hacia finales de la segunda década 
+                            del siglo XXI, se creó un nuevo tipo con 13 velocidades, poco común entre los ciclistas. Estas configuraciones siempre son a elección del deportista, el avance de la tecnología permitió alojar más relaciones en el casete para simplificar 
+                            la Catalina y hacer más sencillo el manejo de las relaciones llevándolos a un solo actuador en el manubrio a diferencia de los sistemas tradicionales con relaciones en el casete y también en la catalina que requieren de dos actuadores o 
+                            sistemas electromecánicos automatizados más complejos y costosos</p>
+                        <figure class="ilustracion">
+                            <img src="/root/assets/images/ciclistas.jpg" alt="Bicicleta" height="600px" width="auto">
+                            <figcaption>Ciclismo de Montaña</figcaption>
+                        </figure>
+                        <p>A historia del ciclismo se remonta al final del siglo XIX, más o menos a partir de 1890.
+                             Esto se debe a que las bicicletas empiezan a desarrollarse más rápidamente en ese momento 
+                             en un intento de perfeccionar ese medio de transporte. Con estos avances, comenzó a ser 
+                             posible alcanzar mayores velocidades con las bicicletas, cada vez más leves y menos costosas.
+                            El deporte tuvo origen inglés, pero desde temprano las principales pruebas surgieron en Francia, 
+                            la cual se adhirió muy bien a esta modalidad y los participantes aprovechaban el terreno montañoso 
+                            para desafiarse a ellos mismos..</p>
+                    </div>
+                    <!--termina contenido del articulo-->
+                    <footer">
+                        <!--Datos del Autor-->
+                        <div>
+                            <span>sportregras- </span><a
+                                href="https://www.eleconomista.com.mx/capitalhumano/El-trabajo-de-ser-atleta-o-cuando-el-deporte-se-vuelve-tu-empleo-20210716-0061.html"
+                                target="_blank">todo sore el ciclismo</a>
+                        </div>
+                        <!--Fin de Datos del Autor-->
+                        <!--Bibliografia-->
+                        <blockquote>
+                            <cite>
+                                Todo sobre Ciclismo [Reglas, Historia, …] 
+                                - SportsRegras. (2022). Retrieved February 10, 2022, 
+                                from Sportsregras.com website: https://sportsregras.com/es/ciclismo-reglas-historia/
+                            </cite>
+                        </blockquote>
+                        <!--Fin Bibliografia-->
+                        </footer>
+                        <!--termina el footer-->
+                </article>
+                <article>
+                    <h2><img src="assets/images/ciclista.png" alt="ciclismo" height="35px" width="auto">mejores ciclistas</h2>
+                    <h4>10/11/21</h4>
+                    <div>
+                        <ol reversed>
+                            <li>alfredo binda</li>
+                            <li>felice gimondi</li>
+                            <li>louison bobet</li>
+                            <li>chris froome</li>
+                            <li>gino bartali</li>
+                            <li>miguel indurain</li>
+                            <li>jacques anaquetil</li>
+                            <li>fausto coppi</li>
+                            <li>bernard hinault</li>
+                            <li>eddy marckx</li>
+                        </ol>
+                        <p>
+                            la lista da ejemplo de los que mas titulos tienen los ciclistas, o los que dieron una revolucion
+                            al deporte y que dejaron cierta huella en este deporte
+                        </p>
+                    </div>
+                    <!--termina contenido-->
+                    <footer">
+                        <!--Datos del Autor-->
+                        <div>
+                            <span>euston- </span><a
+                                href="https://www.euston96.com/ciclismo/"
+                                target="_blank">ciclismo</a>
+                        </div>
+                        <!--Fin de Datos del Autor-->
+                        <!--Bibliografia-->
+                        <blockquote>
+                            <cite>
+                                Ciclismo | Qué es, características,
+                                 para qué sirve, tipos, reglas, pista. 
+                                 (2020, April 16). Retrieved February 10, 2022, 
+                                 from Euston96 website: https://www.euston96.com/ciclismo/
+                            </cite>
+                        </blockquote>
+                        <!--Fin Bibliografia-->
+                        </footer>
+                </article>
+                <article>
+                    <h2><img src="assets/images/ciclista.png" alt="ciclismo" height="35px" width="auto">ciclistas que cambiaron
+                    el deporte</h2>
+                    <h4>10/11/21</h4>
+                    <div>
+                        <figure class="ilustracion">
+                            <iframe width="560" height="315" 
+                            src="https://www.youtube.com/embed/hK2zzK4ctdw" 
+                            title="YouTube video player" 
+                            frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                            allowfullscreen></iframe>
+                            <figcaption>opinion de ciclistas</figcaption>
+                        </figure>
+                        <p> dentro del ranking se puede ver varios ejemplos de personas que han marcado la historia.
+                            que han dejado huella de lo que hoy se conoce que como el ciclismo. 
+                            trambien podemos ver que desafortunadamente este ranking es mas una opinion personal sobre a quienes han marcado algo dentro del
+                            deporte y no        
+                            los que se lo merecen por titulos ya que si fuera asi se mostrarian otros dentro de la tabla
+                        </p>
+                    </div>
+                    <!--termina contenido del articulo-->
+                    <footer">
+                        <!--Datos del Autor-->
+                        <div>
+                            <span>bicirutas - </span><a href="https://www.youtube.com/c/TheWildProject" target="_blank">The
+                                top 10 ciclistas</a>
+                        </div>
+                        <!--Fin de Datos del Autor-->
+                        <!--Bibliografia-->
+                        <blockquote>
+                            <cite>
+                                BICIRUTAS ECUADOR [YouTube Video]. (2022). 
+                                Retrieved from https://www.youtube.com/channel/UCXIh056DBOAsuICNtcpUh0A
+                            </cite>
+                        </blockquote>
+                        <!--Fin Bibliografia-->
+                        </footer>
+                </article>
+                <article>
+                    <header>
+                        <hgroup>
+                            <!--titulo del articulo-->
+                            <h2><img src="assets/images/ciclista.png" alt="Investigacion Lupa" height="35px"
+                                    width="auto">Paginas oficiales
+                            </h2>
+                            <!--fecha en la que se escibio el articulo-->
+                            <h4>12/11/21</h4>
+                        </hgroup>
+                    </header>
+                    <li><a href="https://www.fia.com/">Fia</a></li>
+                    <li><a href="https://mx.nba.com/">Nba</a></li>
+                    <li><a href="https://www.fifa.com/es">Fifa</a></li>
+                    <li><a href="http://www.fmt.org.mx/">Fmt</a></li>
+                    <li><a href="https://www.nfl.com/">Nfl</a></li>
+                    <!--termina contenido del articulo-->
+                </article>
+            </main>
+            <footer>
+                <div><span>josue faustino acosta</span></div>
+                <div><span>Blog creado por<i> Colegio Alamos. </i></span><span>Las opiniones contenidas en este
+                        proyecto pertenecen a los autores de cada entrada.</span></div>
+                <div><span>luis fernando muñoz ledo</span></div>
+            </footer>
+        </section>
+        <!--termina mi blog-->
+    </body>
+
 </html>
