terminado hastaa semana 8

--- a/root/tema4.html
+++ b/root/tema4.html
@@ -64,11 +64,11 @@
                         <!--Fin de Datos del Autor-->
                         <!--Bibliografia-->
                         <blockquote>
-                            <cite>
+                            <p>
                                 Todo sobre Ciclismo [Reglas, Historia, …] 
                                 - SportsRegras. (2022). Retrieved February 10, 2022, 
                                 from Sportsregras.com website: https://sportsregras.com/es/ciclismo-reglas-historia/
-                            </cite>
+                            </p>
                         </blockquote>
                         <!--Fin Bibliografia-->
                         </footer>
@@ -106,12 +106,12 @@
                         <!--Fin de Datos del Autor-->
                         <!--Bibliografia-->
                         <blockquote>
-                            <cite>
+                            <p>
                                 Ciclismo | Qué es, características,
                                  para qué sirve, tipos, reglas, pista. 
                                  (2020, April 16). Retrieved February 10, 2022, 
                                  from Euston96 website: https://www.euston96.com/ciclismo/
-                            </cite>
+                            </p>
                         </blockquote>
                         <!--Fin Bibliografia-->
                         </footer>
@@ -137,7 +137,7 @@
                         </p>
                     </div>
                     <!--termina contenido del articulo-->
-                    <footer">
+                    <footer>
                         <!--Datos del Autor-->
                         <div>
                             <span>bicirutas - </span><a href="https://www.youtube.com/c/TheWildProject" target="_blank">The
@@ -146,10 +146,10 @@
                         <!--Fin de Datos del Autor-->
                         <!--Bibliografia-->
                         <blockquote>
-                            <cite>
+                            <p>
                                 BICIRUTAS ECUADOR [YouTube Video]. (2022). 
                                 Retrieved from https://www.youtube.com/channel/UCXIh056DBOAsuICNtcpUh0A
-                            </cite>
+                            </p>
                         </blockquote>
                         <!--Fin Bibliografia-->
                         </footer>
@@ -172,8 +172,168 @@
                     <li><a href="https://www.nfl.com/">Nfl</a></li>
                     <!--termina contenido del articulo-->
                 </article>
+                <article>
+                    <header>
+                        <hgroup>
+                            <h2>
+                                <img src="/root/assets/images/ciclista.png" alt="ciclismo" height="35px" width="auto">
+                                investigacion
+                            </h2>
+                            <h4>
+                                16/02/22
+                            </h4>
+                        </hgroup>
+                    </header>
+                    <div>
+                        <h3>
+                            ¿historia del ciclismo?
+                        </h3>
+                        <p>
+                            Se dice que una de las primeras apariciones de la bicicleta se dio en 1817 en Alemania
+                             y era más conocida como “Caballo de diversión” o también “máquina de correr”. Sin embargo
+                             , la historia del ciclismo tiene lugar desde 1870 en Italia, donde se llevó a cabo una de
+                              las primeras competiciones oficiales
+                        </p>
+                        <figure class="ilustracion">
+                            <img src="/root/assets/images/ciclistas.jpg" alt="ciclismo" height="600px" width="auto">
+                            <figcaption>ciclistas</figcaption>
+                        </figure>
+                        <p>
+                            Aunque en otras versiones se afirme que la bicicleta fue hecha desde los tiempos del Antiguo 
+                            Egipto y China, solo se concretó que la primera carrera fue realizada desde Florencia hasta 
+                            Pistoia con un recorrido de 33 kilómetros y donde el ganador fue el estadounidense Rynner 
+                            van Neste.
+                        </p>
+                        <h3>
+                            el paso del ciclismo
+                        </h3>
+                        <p>
+                            Desde ese momento se abrió paso a más competiciones en todo el mundo, unas se dedicaron 
+                            al ciclismo como tal y otras a practicar el deporte tradicional. Pero en el siglo XX ya 
+                            fueron más que oficiales las carreras y se dividieron por etapas para poder tener más 
+                            tramos y rutas por recorrer.
+                        </p>
+                        <figure class="ilustracion">
+                            <img src="/root/assets/images/ciclistas.jpg" alt="ciclismo" height="600px" width="auto">
+                            <figcaption>ciclistas</figcaption>
+                        </figure>
+                    </div>
+                    <footer>
+                        <div>
+                            <span>
+                                claro
+                            </span>
+                            <a href="https://www.claro.com.co/institucional/historia-del-ciclismo/#:~:text=Se%20dice%20que%20una%20de,de%20las%20primeras%20competiciones%20oficiales." target="_blank">historia del ciclismo</a>
+                        </div>
+                        <blockquote>
+                            <p>
+                                Claro Colombia. (2021). 
+                                Historia del ciclismo: Trayectoria y reconocimientos. Retrieved February 17, 2022, 
+                                from Claro.com.co website: https://www.claro.com.co/institucional/historia-del-ciclismo/#:~:text=Se%20dice%20que%20una%20de,de%20las%20primeras%20competiciones%20oficiales.
+                            </p>
+                        </blockquote>
+                    </footer>
+                </article>
+                <article>
+                    <header>
+                        <hgroup>
+                            <h2>
+                                <img src="/root/assets/images/ciclista.png" alt="cilcismo" width="35px" height="auto">
+                                investigacion semana 8
+                            </h2>
+                        </hgroup>
+                    </header>
+                    <div>
+                        <h3>
+                            ¿por que el ciclismo es tan bueno?
+                        </h3>
+                        <p>
+                            Desplazarte en bici por la ciudad produce menos estrés mental que hacerlo en coche 
+                            y cuanto más bike friendly sea tu ciudad más fácil será moverte en bicicleta por ella. 
+                            Incluso puede que llegues antes y ahorres tiempo, todo depende de la ciudad en la 
+                            que vivas ya que los paraísos ciclistas que hay en Holanda, Bélgica, o Dinamarca no 
+                            son, de momento, habituales en el resto del mundo.
+                        </p>
+                        <figure class="ilustracion">
+                            <img src="/root/assets/images/ciclistas.jpg" alt="ciclismo" width="600px" height="auto">
+                            <figcaption>ciclistas</figcaption>
+                        </figure>
+                        <p>
+                            La bicicleta es además una excelente manera de despejar nuestra mente, liberar tensiones, 
+                            olvidar las preocupaciones del día a día, estimular la creatividad o cambiar de aires 
+                            para resolver bloqueos mentales y que surjan nuevas ideas y pensamientos. 
+                            Por no hablar de la sensación de felicidad cuando te montas en una bici, emprendes 
+                            una ruta y llegas un poco más lejos que el día anterior, o un poco más rápido, o 
+                            simplemente menos cansada que la última vez y con ganas de volver a dar pedales. 
+                            Nuestra confianza y autoestima florece porque nos sentimos poderosas tras alcanzar 
+                            nuestros objetivos tras haber ido a por ellos con toda nuestra fuerza.
+                        </p>
+                        <h3>
+                            ¿realmente es tan bueno?
+                        </h3>
+                        <p>
+                            Practicar ciclismo provoca también cambios en nuestra mente. 
+                            Tomamos conciencia de nuestro estado físico y nos ocupamos más 
+                            de nuestra salud, ayudándonos a llevar hábitos de vida saludables. 
+                            Podríamos decir que nos cambia la vida porque el tiempo que 
+                            estés andando en bici estarás rodeada de personas con hábitos 
+                            de vida saludables. Ese tiempo no lo estarás dedicando a un ocio 
+                            menos saludable o directamente perjudicial para la salud.
+                        </p>
+                        <figure class="ilustracion">
+                            <img src="/root/assets/images/ciclistas.jpg" alt="ciclismo" height="600px" width="auto">
+                            <figcaption>ciclistas</figcaption>
+                        </figure>
+                    </div>
+                    <footer>
+                        <span>
+                            beneficios del ciclismo
+                        </span>
+                        <a href="https://www.siroko.com/blog/c/es/10-beneficios-del-ciclismo-para-mujeres/#:~:text=El%20ciclismo%20mejora%20la%20salud,de%20las%20piernas%20y%20gl%C3%BAteos." target="_blank">
+                            siroko cycling       
+                        </a>
+                        <blockquote>
+                            <p>
+                                10 Beneficios del Ciclismo en Mujeres 
+                                – SIROKO CYCLING COMMUNITY. (2021, January 21). 
+                                Retrieved February 17, 2022, from SIROKO CYCLING COMMUNITY 
+                                website: https://www.siroko.com/blog/c/es/10-beneficios-del-ciclismo-para-mujeres/#:~:text=El%20ciclismo%20mejora%20la%20salud,de%20las%20piernas%20y%20gl%C3%BAteos.
+                            </p>
+                        </blockquote>
+                    </footer>
+                </article>
             </main>
-            <footer>
+            <aside>
+                <h2>
+                    microblogging
+                </h2>
+                <div>
+                    <span>
+                        El Draisine, predecesor de la bici moderna
+                    </span>
+                </div>
+                <div>
+                    <span>
+                        El primer boceto de una bicicleta que se conoce, fue elaborado por Leonardo Da Vinci 
+                    </span>
+                </div>
+                <div>
+                    <span>
+                        El antecedente directo de la bicicleta fue construido por un alemán de nombre Karl Dreis, en 1816
+                    </span>
+                </div>
+                <div>
+                    <span>
+                        El inventor de los pedales fue el escocés Kirkpatrick Macmillan, en 1839.
+                    </span>
+                </div>
+                <div>
+                    <span>
+                        Al principio, las ruedas de la bicicleta se elaboraban en madera. Fue hasta 1845
+                    </span>
+                </div>
+            </aside>
+            <footer id="footer_blog">
                 <div><span>josue faustino acosta</span></div>
                 <div><span>Blog creado por<i> Colegio Alamos. </i></span><span>Las opiniones contenidas en este
                         proyecto pertenecen a los autores de cada entrada.</span></div>
