--- a/root/tema3.html
+++ b/root/tema3.html
@@ -171,6 +171,25 @@
                     <header>
                         <hgroup>
                             <h2>
+                                <img src="/Root/Assets/Images/guitarra.png" alt="guitarra" width="auto" height="35px">
+                                video explicando
+                            </h2>
+                            <h4>
+                                19/02/22
+                            </h4>
+                        </hgroup>
+                    </header>
+                    <div>
+                        <figure>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/Ziuub_ReZHs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <figcaption>video explicando</figcaption>
+                        </figure>
+                    </div>
+                </article>
+                <article>
+                    <header>
+                        <hgroup>
+                            <h2>
                                 <img src="/root/assets/images/jugador-de-futbol.png" alt="futbol" height="35px" width="auto">
                                 investigacion
                             </h2>
